--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,11 @@
     "@tailwindcss/postcss": "^4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.5.7"
+    "tailwindcss": "^3.5.7",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -48,14 +52,9 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "jest": "^30.0.0",
-    "jest-environment-jsdom": "^30.0.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "jest-environment-jsdom": "^30.0.0"
   }
 }
