--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node": "20.x"
   },
   "dependencies": {
-    "recharts": "^2.15.3"
+    "@stripe/stripe-js": "^7.3.1",
+    "recharts": "^2.15.3",
+    "stripe": "^18.2.1"
   }
 }
