--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:fresh": "npm run clean && npm run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "clean": "rm -rf .next node_modules/.cache",
+    "kill-port": "lsof -ti:3000 | xargs kill -9 2>/dev/null || echo 'No processes on port 3000'",
+    "dev:safe": "npm run kill-port && npm run clean && npm run dev",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -36,8 +40,8 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
@@ -47,11 +51,11 @@
     "framer-motion": "^12.18.1",
     "gtag": "^1.0.1",
     "lucide-react": "^0.516.0",
-    "next": "15.3.3",
+    "next": "14.2.14",
     "postcss": "^8.5.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
@@ -68,8 +72,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.14",
     "jest": "^30.0.0",
     "jest-environment-jsdom": "^30.0.0",
     "vercel": "^43.3.0"
