fix: Remove hardcoded secrets and update CORS for Railway deployment
- Replaced all hardcoded API keys and secrets with secure placeholders
- Enhanced CORS middleware for Railway domain support (.railway.app, .up.railway.app)
- Fixed barber payments page 404 error with working component
- Updated RBAC permissions for payment split endpoints
- Created comprehensive setup guides for secure deployment

No secrets are now committed to repository - all sensitive data must be configured via environment variables.

--- a/backend/.env.auth
+++ b/backend/.env.auth
@@ -1,3 +1,5 @@
 # JWT Authentication Configuration for 6FB Booking
-JWT_SECRET_KEY=uWphzK1XGuYKhH4hMh1-bTsD4N_YauVJBFqIchdAdce1Lu57faZbLc6TK6x4ubN3yt6X8xH2pCL4PK1GfxGMwg
-AUTH_DATABASE_PATH=/Users/bossio/auth-system/auth.db
+# Generate a secure JWT secret key with:
+# python3 -c 'import secrets; print(secrets.token_urlsafe(64))'
+JWT_SECRET_KEY=YOUR_64_CHAR_JWT_SECRET_KEY_HERE
+AUTH_DATABASE_PATH=/path/to/your/auth-system/auth.db
