--- a/backend/.env.production
+++ b/backend/.env.production
@@ -15,19 +15,21 @@ DATABASE_URL=postgresql://username:password@localhost:5432/6fb_booking_prod
 # JWT & AUTHENTICATION (REQUIRED)
 # =============================================================================
 # Generate secure keys with: python3 -c 'import secrets; print(secrets.token_urlsafe(64))'
-SECRET_KEY=REPLACE_WITH_64_CHAR_SECURE_KEY
-JWT_SECRET_KEY=REPLACE_WITH_64_CHAR_SECURE_KEY
+# CRITICAL: Generate two different 64-character keys for production
+SECRET_KEY=YOUR_64_CHAR_SECRET_KEY_HERE
+JWT_SECRET_KEY=YOUR_64_CHAR_JWT_SECRET_KEY_HERE
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
 # =============================================================================
 # STRIPE CONFIGURATION (REQUIRED)
 # =============================================================================
-# Production Stripe keys (get from Stripe Dashboard)
-STRIPE_SECRET_KEY=sk_live_...
-STRIPE_PUBLISHABLE_KEY=pk_live_...
-STRIPE_WEBHOOK_SECRET=whsec_...
-STRIPE_CONNECT_CLIENT_ID=ca_...
+# Production Stripe keys (get from Stripe Dashboard: https://dashboard.stripe.com/)
+# IMPORTANT: Use LIVE keys for production (sk_live_... and pk_live_...)
+STRIPE_SECRET_KEY=sk_live_YOUR_LIVE_SECRET_KEY_HERE
+STRIPE_PUBLISHABLE_KEY=pk_live_YOUR_LIVE_PUBLISHABLE_KEY_HERE
+STRIPE_WEBHOOK_SECRET=whsec_YOUR_WEBHOOK_SECRET_HERE
+STRIPE_CONNECT_CLIENT_ID=ca_YOUR_CONNECT_CLIENT_ID_HERE
 
 # =============================================================================
 # EMAIL CONFIGURATION (REQUIRED)
@@ -80,8 +82,9 @@ SQUARE_ACCESS_TOKEN=your-square-access-token
 SQUARE_ENVIRONMENT=production
 
 # Google Calendar Integration
-GOOGLE_CALENDAR_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-GOOGLE_CALENDAR_CLIENT_SECRET=your-google-client-secret
+# Get from Google Cloud Console: https://console.cloud.google.com/
+GOOGLE_CALENDAR_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE.apps.googleusercontent.com
+GOOGLE_CALENDAR_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET_HERE
 GOOGLE_CALENDAR_REDIRECT_URI=https://api.bookbarber.com/api/v1/calendar/oauth/callback
 
 # Tremendous (Alternative payouts)
