--- a/backend/.env.staging
+++ b/backend/.env.staging
@@ -25,7 +25,8 @@ DB_ECHO=false
 # =============================================================================
 # JWT & AUTHENTICATION
 # =============================================================================
-SECRET_KEY=staging-super-secret-jwt-key-change-this-to-64-character-random-string
+# Generate with: python3 -c 'import secrets; print(secrets.token_urlsafe(64))'
+SECRET_KEY=YOUR_64_CHAR_SECRET_KEY_HERE
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
@@ -33,14 +34,15 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 # =============================================================================
 # STRIPE CONFIGURATION (TEST MODE for staging)
 # =============================================================================
-# Use Stripe test keys for staging
-STRIPE_SECRET_KEY=sk_test_staging_your_test_secret_key_here
-STRIPE_PUBLISHABLE_KEY=pk_test_staging_your_test_publishable_key_here
-STRIPE_WEBHOOK_SECRET=whsec_staging_test_webhook_secret
+# Use Stripe test keys for staging (get from Stripe Dashboard)
+# https://dashboard.stripe.com/ - Use TEST mode keys
+STRIPE_SECRET_KEY=sk_test_YOUR_TEST_SECRET_KEY_HERE
+STRIPE_PUBLISHABLE_KEY=pk_test_YOUR_TEST_PUBLISHABLE_KEY_HERE
+STRIPE_WEBHOOK_SECRET=whsec_YOUR_TEST_WEBHOOK_SECRET_HERE
 
 # Stripe Connect (test mode for staging)
-STRIPE_CONNECT_CLIENT_ID=ca_staging_test_connect_client_id
-STRIPE_CONNECT_WEBHOOK_SECRET=whsec_staging_test_connect_webhook_secret
+STRIPE_CONNECT_CLIENT_ID=ca_YOUR_TEST_CONNECT_CLIENT_ID_HERE
+STRIPE_CONNECT_WEBHOOK_SECRET=whsec_YOUR_TEST_CONNECT_WEBHOOK_SECRET_HERE
 
 # =============================================================================
 # EMAIL CONFIGURATION (Test Service for staging)
@@ -65,8 +67,9 @@ EMAIL_FROM_NAME=6FB Platform (Staging)
 # SMS CONFIGURATION (Test Service)
 # =============================================================================
 # Use test SMS service for staging
-TWILIO_ACCOUNT_SID=staging_test_account_sid
-TWILIO_AUTH_TOKEN=staging_test_auth_token
+# Get from Twilio Console: https://console.twilio.com/
+TWILIO_ACCOUNT_SID=YOUR_TWILIO_ACCOUNT_SID_HERE
+TWILIO_AUTH_TOKEN=YOUR_TWILIO_AUTH_TOKEN_HERE
 TWILIO_PHONE_NUMBER=+15005550006  # Twilio test number
 SMS_ENABLED=true
 
@@ -102,8 +105,9 @@ SQUARE_ACCESS_TOKEN=staging_sandbox_access_token
 SQUARE_ENVIRONMENT=sandbox
 
 # Google Calendar Integration (staging OAuth app)
-GOOGLE_CALENDAR_CLIENT_ID=staging-client-id.apps.googleusercontent.com
-GOOGLE_CALENDAR_CLIENT_SECRET=staging_client_secret
+# Create separate OAuth app for staging in Google Cloud Console
+GOOGLE_CALENDAR_CLIENT_ID=YOUR_STAGING_CLIENT_ID_HERE.apps.googleusercontent.com
+GOOGLE_CALENDAR_CLIENT_SECRET=YOUR_STAGING_CLIENT_SECRET_HERE
 GOOGLE_CALENDAR_REDIRECT_URI=https://staging.6fbplatform.com/api/v1/calendar/oauth/callback
 
 # Google Analytics (staging property)
