fix: Resolve JavaScript error in calendar-demo page on Railway production

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,13 +54,14 @@
     "framer-motion": "^12.18.1",
     "gtag": "^1.0.1",
     "lucide-react": "^0.516.0",
-    "next": "14.2.14",
+    "next": "^14.2.30",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.0",
