--- a/.env.template
+++ b/.env.template
@@ -114,7 +114,8 @@ FRONTEND_URL=https://yourdomain.com
 NEXT_PUBLIC_API_URL=https://api.yourdomain.com
 
 # CORS origins (comma-separated list for multiple domains)
-ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+# Note: We no longer use Vercel - using Railway for production deployment
+ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com,https://your-app.up.railway.app
 
 # =============================================================================
 # MONITORING & OBSERVABILITY (PRODUCTION RECOMMENDED)
