chore: update configurations for enforcement system
- Update .gitignore with monitoring directories
- Add Puppeteer to package dependencies
- Configure build validation scripts
- Update Next.js configuration

Ensures all enforcement tools are properly integrated.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "dev:monitor": "node scripts/dev-health-monitor.js --alerts",
     "dev:dashboard": "node scripts/dev-health-monitor.js --dashboard --alerts",
     "dev:with-monitoring": "npm run dev:validate && (npm run dev:monitor &) && npm run dev:raw",
+    "prebuild": "npm run validate:build",
     "build": "node scripts/verify-contact-page.js && next build",
+    "postbuild": "npm run validate:build:post",
     "start": "next start -p ${PORT:-3000}",
     "start:railway": "next start -p $PORT",
     "build:railway": "next build",
@@ -33,6 +35,8 @@
     "test:extensions": "node scripts/test-extensions.js",
     "debug:extensions": "node scripts/test-extensions.js && echo '\n📖 See BROWSER_EXTENSION_TROUBLESHOOTING.md for detailed solutions'",
     "validate:build": "node scripts/validate-build.js",
+    "validate:build:post": "node scripts/validate-build.js --post-build",
+    "validate:build:ci": "SKIP_BUILD_VALIDATION=false node scripts/validate-build.js --ci",
     "validate:deployment": "node scripts/pre-deployment-validation.js",
     "health:check": "node scripts/startup-health-monitor.js",
     "health:monitor": "node scripts/startup-health-monitor.js --continuous --alerts",
@@ -117,6 +121,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "chalk": "^4.1.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.14",
     "jest": "^30.0.0",
