--- a/backend-v2/requirements.txt
+++ b/backend-v2/requirements.txt
@@ -27,6 +27,12 @@ jinja2==3.1.3
 redis==5.0.1
 celery==5.3.4
 
+# Export dependencies
+pandas==2.2.0
+openpyxl==3.1.2
+reportlab==4.0.9
+
 # Development only
 pytest>=7.0.0,<8.0.0
 pytest-asyncio==0.23.4
+pytest-cov==4.1.0
