--- a/backend-v2/frontend-v2/package.json
+++ b/backend-v2/frontend-v2/package.json
@@ -84,6 +84,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^9.8.0",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^4.2.4",
