--- a/backend-v2/frontend-v2/package.json
+++ b/backend-v2/frontend-v2/package.json
@@ -52,10 +52,12 @@
     "@builder.io/react": "^8.2.5",
     "@builder.io/sdk": "^6.1.1",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-spring/web": "^10.0.1",
     "@sentry/nextjs": "^8.55.0",
     "@stripe/react-stripe-js": "^3.7.0",
