--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, staging]
   pull_request:
     branches: [main]
   workflow_dispatch:
@@ -659,24 +659,33 @@ jobs:
     name: Deploy to Staging
     needs: build-and-push
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/staging'
     environment: staging
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Deploy to staging server
-      uses: appleboy/ssh-action@v0.1.5
-      with:
-        host: ${{ secrets.STAGING_HOST }}
-        username: ${{ secrets.STAGING_USER }}
-        key: ${{ secrets.STAGING_SSH_KEY }}
-        script: |
-          cd /opt/6fb-platform-v2
-          git pull origin develop
-          docker-compose -f docker-compose.staging.yml pull
-          docker-compose -f docker-compose.staging.yml up -d
-          docker system prune -f
+    - name: Deploy to Render staging
+      run: |
+        echo "🚀 Triggering Render staging deployment..."
+        
+        # Trigger Render deployment hook for backend
+        if [[ -n "${{ secrets.RENDER_STAGING_BACKEND_HOOK }}" ]]; then
+          echo "Deploying backend to Render..."
+          curl -X POST "${{ secrets.RENDER_STAGING_BACKEND_HOOK }}"
+        else
+          echo "⚠️ RENDER_STAGING_BACKEND_HOOK not configured - skipping backend deployment"
+        fi
+        
+        # Trigger Render deployment hook for frontend
+        if [[ -n "${{ secrets.RENDER_STAGING_FRONTEND_HOOK }}" ]]; then
+          echo "Deploying frontend to Render..."
+          curl -X POST "${{ secrets.RENDER_STAGING_FRONTEND_HOOK }}"
+        else
+          echo "⚠️ RENDER_STAGING_FRONTEND_HOOK not configured - skipping frontend deployment"
+        fi
+        
+        echo "✅ Render deployment hooks triggered"
 
     - name: Run post-deployment hooks
       run: |
@@ -684,25 +693,48 @@ jobs:
         if [[ -f "hooks/post-deploy" ]]; then
           # Set staging environment variables for hook
           export DEPLOYMENT_ENV="staging"
-          export API_BASE_URL="${{ secrets.STAGING_API_URL }}"
+          export API_BASE_URL="${{ secrets.STAGING_API_URL || 'https://staging-api.bookedbarber.com' }}"
           bash hooks/post-deploy
         fi
 
     - name: Staging health check
       run: |
         echo "🔍 Performing staging health checks..."
-        sleep 30
+        sleep 60  # Give Render more time to deploy
+        
+        # Set staging API URL with fallback
+        STAGING_API="${{ secrets.STAGING_API_URL }}"
+        if [[ -z "$STAGING_API" ]]; then
+          echo "⚠️ STAGING_API_URL not configured - using default"
+          STAGING_API="https://staging-api.bookedbarber.com"
+        fi
         
         # Health check with retry
-        for i in {1..5}; do
-          if curl -f ${{ secrets.STAGING_API_URL }}/health; then
+        echo "Testing staging API at: $STAGING_API"
+        for i in {1..10}; do
+          if curl -f -s "$STAGING_API/health" || curl -f -s "$STAGING_API/docs"; then
             echo "✅ Staging API health check passed"
             break
           else
-            echo "⚠️ Health check attempt $i failed, retrying..."
-            sleep 10
+            echo "⚠️ Health check attempt $i failed, retrying in 15s..."
+            sleep 15
           fi
         done
+        
+        # Test frontend if configured
+        STAGING_FRONTEND="${{ secrets.STAGING_FRONTEND_URL }}"
+        if [[ -n "$STAGING_FRONTEND" ]]; then
+          echo "Testing staging frontend at: $STAGING_FRONTEND"
+          for i in {1..5}; do
+            if curl -f -s "$STAGING_FRONTEND" > /dev/null; then
+              echo "✅ Staging frontend health check passed"
+              break
+            else
+              echo "⚠️ Frontend health check attempt $i failed, retrying..."
+              sleep 10
+            fi
+          done
+        fi
 
   deploy-production:
     name: Deploy to Production
