--- a/backend-v2/Dockerfile
+++ b/backend-v2/Dockerfile
@@ -1,14 +1,17 @@
-# Use Python 3.11 slim image
-FROM python:3.11-slim
+# Multi-stage build for BookedBarber V2 Backend
+FROM python:3.11-slim as base
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    libpq-dev \
+    curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
-
-# Install system dependencies including curl for health checks
-RUN apt-get update && apt-get install -y \
-    gcc \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
 COPY requirements.txt .
@@ -16,15 +19,28 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Production stage
+FROM base as production
+
+# Create non-root user for security
+RUN groupadd -r bookedbarber && useradd -r -g bookedbarber bookedbarber
+
 # Copy application code
 COPY . .
+
+# Create directories and set permissions
+RUN mkdir -p /app/logs /app/uploads \
+    && chown -R bookedbarber:bookedbarber /app
+
+# Switch to non-root user
+USER bookedbarber
 
 # Expose port
 EXPOSE 8000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:8000/health || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
-# Run with uvicorn (use $PORT environment variable for Render)
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+# Default command for Kubernetes
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
