fix: update Render build configuration to use rootDir
- Set rootDir to backend-v2/frontend-v2 for proper working directory context
- Simplify build and start commands to run directly from frontend directory
- Fixes module resolution issues during Render build process

--- a/render.staging.yaml
+++ b/render.staging.yaml
@@ -9,11 +9,9 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: |
-      cd backend-v2/frontend-v2 && \
-      npm install --legacy-peer-deps && \
-      npm run build
-    startCommand: cd backend-v2/frontend-v2 && npm run start
+    buildCommand: npm install --legacy-peer-deps && npm run build
+    rootDir: backend-v2/frontend-v2
+    startCommand: npm run start
     envVars:
       - key: NODE_ENV
         value: production
