debug: add directory listing to Render build for diagnostics
- Add ls command to show contents of components/ui/ during build
- Remove rootDir to go back to explicit cd commands
- Will help identify if files are missing during Render deployment

--- a/render.staging.yaml
+++ b/render.staging.yaml
@@ -9,9 +9,12 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: npm install --legacy-peer-deps && npm run build
-    rootDir: backend-v2/frontend-v2
-    startCommand: npm run start
+    buildCommand: |
+      cd backend-v2/frontend-v2 && \
+      ls -la components/ui/ | head -5 && \
+      npm install --legacy-peer-deps && \
+      npm run build
+    startCommand: cd backend-v2/frontend-v2 && npm run start
     envVars:
       - key: NODE_ENV
         value: production
