--- a/backend-v2/frontend-v2/package.json
+++ b/backend-v2/frontend-v2/package.json
@@ -101,6 +101,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
     "next": "^14.2.30",
+    "playwright": "^1.54.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^9.8.0",
