fix: enable Render auto-deployment and add missing Badge component
Render Configuration:
- Enable autoDeploy: true for both backend and frontend staging services
- Now Render will automatically deploy when staging branch is updated
- No more manual deployment required

Badge Component:
- Add missing Badge UI component needed for build
- Includes variants: default, secondary, destructive, outline, success, warning, info
- Resolves build failures in multiple pages
- Follows shadcn/ui design patterns

--- a/render.staging.yaml
+++ b/render.staging.yaml
@@ -91,7 +91,7 @@ services:
       - key: SENTRY_ENVIRONMENT
         value: staging
     healthCheckPath: /health
-    autoDeploy: false  # Manual deploy for staging
+    autoDeploy: true  # Auto-deploy on staging branch changes
     branch: staging  # Deploy from staging branch
     numInstances: 1
     
@@ -132,7 +132,7 @@ services:
       - key: NEXT_PUBLIC_SHOW_TEST_DATA
         value: "true"
     healthCheckPath: /
-    autoDeploy: false  # Manual deploy for staging
+    autoDeploy: true  # Auto-deploy on staging branch changes
     branch: staging  # Deploy from staging branch
     numInstances: 1
 
