fix: resolve webpack runtime error for Vercel deployment
- Simplified webpack configuration to avoid runtime module loading issues
- Removed problematic entry point modifications that caused chunk errors
- Updated minimal-polyfills.js to export proper default value
- Simplified splitChunks configuration for Vercel Lambda environment
- Removed vercel-build-polyfills.js from build script
- Added proper vercel.json configuration with Node.js 20.x runtime

The webpack runtime error was caused by complex chunk splitting and entry
point modifications that interfered with webpack's module resolution in
the AWS Lambda environment.

--- a/backend-v2/frontend-v2/package.json
+++ b/backend-v2/frontend-v2/package.json
@@ -7,7 +7,7 @@
     "dev:turbo": "next dev --turbo",
     "staging": "cp .env.staging .env.local && next dev -p 3001",
     "staging:turbo": "cp .env.staging .env.local && next dev --turbo -p 3001",
-    "build": "node -r ./vercel-build-polyfills.js ./node_modules/.bin/next build",
+    "build": "next build",
     "build:analyze": "ANALYZE=true next build",
     "build:profile": "next build --profile",
     "build:debug": "next build --debug",
