--- a/backend-v2/frontend-v2/vercel.json
+++ b/backend-v2/frontend-v2/vercel.json
@@ -1,15 +1,3 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "functions": {
-    "app/**/*.js": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 30
-    }
-  },
-  "env": {
-    "NODE_OPTIONS": "--max-old-space-size=4096"
-  }
+  "framework": "nextjs"
 }
